# inliterate

./: Ask.hs  InOut.hs  InOutProc.hs  Inlit.hs  README.md  TestInlit.ihs  inliterate.cabal
