Name:                inliterate
Version:             0.1
Description:         inliterate programming for haskell
License:             BSD3
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.2

Library
   Exposed-modules:  Ask

--Executable inoutproc
--   Hs-source-dirs:   prog
--   Main-Is:          InOutProc.hs
--   Build-depends:    haskell-src-exts, pretty, base>=4, bugpan
--   other-modules:    InOut


Executable inlit
--   Hs-source-dirs:   prog
   Main-Is:          Inlit.hs
   Build-depends:    haskell-src-exts, pretty, base>=4, process, directory, gnewplot, random
   other-modules:    InOut

